samples/_failures_safe/1761321905_14cf87_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15a7cbe0.c: In function ‘main’:
./samples/SAFE/__tmp_15a7cbe0.c:137:5: error: expected declaration or statement at end of input
  137 |     init_analyzer(&analyzer);
      |     ^~~~~~~~~~~~~
